kubernetes/system/external-ai/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-ai
  labels:
    app.kubernetes.io/part-of: external-ai
